Bind Task Status in User Dashboard

--- a/angularapp1.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/angularapp1.client/src/app/Admin/dashboard/dashboard.component.html
@@ -16,10 +16,10 @@
           <h2 class="text-center mt-3">Dashboard</h2>
           <ul class="nav flex-column mt-4">
             <li class="nav-item">
-              <a class="nav-link active" routerLink="dashboard/manageusers">User Management</a>
+              <a class="nav-link active" routerLink="/dashboard/manageusers">User Management</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/task-management">Task Management</a>
+              <a class="nav-link" routerLink="/dashboard/tasks-list">Task Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/profile">Profile</a>
