--- a/angularapp1.client/src/app/UserDashboard/side-bar/side-bar.component.html
+++ b/angularapp1.client/src/app/UserDashboard/side-bar/side-bar.component.html
@@ -10,26 +10,20 @@
       <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 250px; height: 100vh;">
         <h5 class="text-center mb-4">User Dashboard</h5>
         <ul class="nav nav-pills flex-column mb-auto">
+          <li>
+            <a routerLink="/user/AdminProfile" class="nav-link">
+              <i class="bi bi-person me-2"></i> Profile
+
+            </a>
+          </li>
           <li class="nav-item">
             <a routerLink="/user/assignedTasks" class="nav-link active" aria-current="page">
               <i class="bi bi-list-task me-2"></i> My Tasks
             </a>
           </li>
-          <li>
-            <a routerLink="/user-dashboard/notifications" class="nav-link">
-              <i class="bi bi-bell me-2"></i> Notifications
-            </a>
-          </li>
-          <li>
-            <a routerLink="/user-dashboard/watchlist" class="nav-link">
-              <i class="bi bi-eye me-2"></i> Watchlist
-            </a>
-          </li>
-          <li>
-            <a routerLink="/user-dashboard/settings" class="nav-link">
-              <i class="bi bi-gear me-2"></i> Settings
-            </a>
-          </li>
+
+
+
         </ul>
         <hr>
         <div class="dropdown">
@@ -38,10 +32,10 @@
             <strong>User</strong>
           </a>
           <ul class="dropdown-menu dropdown-menu-end text-small shadow" aria-labelledby="dropdownUser">
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><a class="dropdown-item" href="#">Settings</a></li>
+
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
+            <li><a class="dropdown-item" href="#" (click)="logout()">Sign out</a></li>
+
           </ul>
         </div>
       </div>
