--- a/angularapp1.client/src/app/Admin/admin-profile/admin-profile.component.html
+++ b/angularapp1.client/src/app/Admin/admin-profile/admin-profile.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="userProfile" class="container mt-4">
-  <h2 class="mb-4">User Profile</h2>
+  <h2 class="mb-4">Admin Profile</h2>
 
   <!-- Display Profile -->
   <div *ngIf="!isEditing" class="border p-3 rounded bg-light">
